# MyGameEngine

./: .clang-format  CMakeLists.txt  README  TODO
CMake/: Utilities.cmake
Engine/: CMakeLists.txt
Engine/Include/: Window.hpp
Engine/Source/Common/: main.cpp
Engine/Source/OS/Win32/: Init.cpp
Engine/Source/OS/Win32/Windows/: Window.cpp  WindowsController.hpp
ExampleGame/: CMakeLists.txt
ExampleGame/Source/: main.cpp
Runtime/: CMakeLists.txt
Runtime/CMake/: PlatformInfo.cmake
Runtime/Extras/: platform-info.cpp
Runtime/Include/: Array.hpp  Bytes.hpp  CommonUtilities.hpp  Containers.hpp  Endianness.hpp  Exceptions.hpp  StdAfx.hpp  __stdafx.hpp  __string_decl.hpp  __string_encodings.def  __string_impl.hpp  __string_impl2.hpp
Runtime/Include/Core/: Array.hpp  List.hpp  Pair.hpp  String.hpp
Runtime/Include/Intrinsics/: ByteSwaps.hpp  Interrupts.hpp
Runtime/Include/Macro/: Platform.hpp  Syntax.hpp  Utilities.hpp
Runtime/Include/Marcoses/: Helpers.hpp  Platform.hpp  Syntax.hpp
Runtime/Include/Memory/: Allocators.hpp  Bits.hpp  Buffer.hpp  SharedPtr.hpp  UniquePtr.hpp  Utils.hpp
Runtime/Include/Threading/: AtomicCounter.hpp  CondVar.hpp  CurrentThread.hpp  Mutex.hpp  Promise.hpp  TLockable.hpp  UniqueLock.hpp
Runtime/Include/Types/: Casts.hpp  Chars.hpp  Fundamental.hpp  Meta.hpp  Numerics.hpp  RTTI.hpp  Traits.hpp  TypeInfo.hpp
Runtime/Include/Utils/: Common.hpp  PImpl.hpp
Runtime/Include/Win32/: ANSI.hpp  Base.hpp  Heap.hpp  Process.hpp  Sync.hpp  Thread.hpp  Time.hpp
Runtime/Include/Win32Api/: Base.hpp  CurrentProcess.hpp  CurrentThread.hpp  FileTime.hpp  Heap.hpp  HighResolutionTimer.hpp  Processes.hpp  SystemTime.hpp  Threads.hpp  Windows.hpp
Runtime/Include/Win32Api/Sync/: CondVar.hpp  SRWLock.hpp
Runtime/Source/Arch/AMD64/MemoryImpl/: memcpy.asm  memset.asm
Runtime/Source/Common/Memory/: Allocators.cpp  CrtMap.cpp
Runtime/Source/Entry/: ProgramEntry.cpp
Runtime/Source/Exceptions/: FrameHandler.cpp  PureCall.cpp  Throw.cpp
Runtime/Source/Memory/: GlobalHeap.cpp  memcpy.asm  memset.asm
Runtime/Source/OS/Win32/Api/: CurrentProcess.cpp  CurrentThread.cpp  DeclSpecs.hpp  Heap.cpp  HighResolutionTimer.cpp  Processes.cpp  SystemTime.cpp  Threads.cpp  Windows.cpp
Runtime/Source/OS/Win32/Api/Sync/: CondVar.cpp  SRWLock.cpp
Runtime/Source/OS/Win32/Entry/: EntryPoint.cpp  ISA.cpp  ISA.hpp  Initializers.cpp  Initializers.hpp  SecurityCookie.cpp  SecurityCookie.hpp
Runtime/Source/OS/Win32/Memory/: Allocators.cpp  Heap.cpp  Heap.hpp
Runtime/Source/OS/Win32/Threading/: CondVar.cpp  CurrentThread.cpp  Mutex.Data.hpp  Mutex.cpp
Runtime/Source/OS/Win32/Threads/: CurrentThread.cpp
Runtime/Source/RTTI/: type_info.cpp  type_info_vftable.asm
Runtime/Source/Security/: Cookie.cpp  Cookie.hpp
Runtime/Source/String/Encodings/: ANSI.hpp  Base.hpp  Encodings.cpp  UTF16.hpp  UTF32.hpp  UTF8.hpp  WCHAR.hpp
Runtime/Tests/: CMakeLists.txt  main.cpp
Runtime/Tests/Tests/: ListTests.cpp  StringTests.cpp
Source/: StdAfx.hpp
Source/Core/: List.hpp
Source/Entry/: Main.cpp
Source/Entry/Platform/Win32/: EntryPoint.cpp  GlobalsInit.cpp  GlobalsInit.hpp  SecurityCookie.cpp  SecurityCookie.hpp
Source/Memory/: Allocators.hpp  Heap.hpp  Utils.hpp
Source/Memory/Arch/amd64/: memcpy.asm
Source/Memory/Platform/Win32/: Heap.cpp  Heap.hpp
Source/Types/: Meta.hpp  Numerics.hpp
Source/Win32/: Base.hpp  Heap.cpp  Heap.hpp  Process.cpp  Process.hpp  win32-incl-wrapper.hpp
